--- a/public/aiueo-board.html
+++ b/public/aiueo-board.html
@@ -47,24 +47,26 @@
       margin-bottom: 10px;
     }
     .row {
-      display: grid;
-      grid-template-columns: repeat(5, 1fr);
-      gap: 6px;
-      margin-bottom: 6px;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 4px;              /* ★ スキマを少し狭くして「ハズレ」を減らす */
+    margin-bottom: 4px;
+    direction: rtl;        /* 右から あいうえお にする場合はそのまま */
     }
     .key {
-      border-radius: 10px;
-      border: 1px solid var(--border);
-      background: #fff;
-      min-height: 42px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: clamp(18px, 5vw, 26px);
-      cursor: pointer;
-      user-select: none;
-      touch-action: manipulation;
+    border-radius: 10px;
+    border: 1px solid var(--border);
+    background: #fff;
+    min-height: 56px;      /* ★ タップ領域を少し大きく（44px以上が目安） */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: clamp(18px, 5vw, 26px);
+    cursor: pointer;
+    user-select: none;
+    touch-action: manipulation;
     }
+
     .key:active {
       background: var(--accent-soft);
       border-color: var(--accent);
@@ -258,27 +260,26 @@
       </section>
     </div>
   </div>
-
-  <script>
+<script>
     (function(){
-      const outputEl = document.getElementById('output');
-      const statusEl = document.getElementById('status');
-      const kanaKeys = document.querySelectorAll('.key[data-kana]');
-      const funcKeys = document.querySelectorAll('.key[data-action]');
-      const btnUndo = document.getElementById('btn-undo');
-      const btnClear = document.getElementById('btn-clear');
-      const btnSpeakSentence = document.getElementById('btn-speak-sentence');
+        const outputEl = document.getElementById('output');
+        const statusEl = document.getElementById('status');
+        const btnUndo = document.getElementById('btn-undo');
+        const btnClear = document.getElementById('btn-clear');
+        const btnSpeakSentence = document.getElementById('btn-speak-sentence');
+        const boardEl = document.querySelector('.board');
+        const allKeys = Array.from(document.querySelectorAll('.key:not(.empty)'));
 
-      let buffer = "";
+        let buffer = "";
 
-      function updateOutput(){
+        function updateOutput(){
         outputEl.textContent = buffer;
-      }
+        }
 
-      function speak(text){
+        function speak(text){
         if (!('speechSynthesis' in window)) {
-          statusEl.textContent = '⚠ この端末では音声読み上げが使えません。';
-          return;
+            statusEl.textContent = '⚠ この端末では音声読み上げが使えません。';
+            return;
         }
         window.speechSynthesis.cancel();
         const u = new SpeechSynthesisUtterance(text);
@@ -286,114 +287,162 @@
         u.rate = 1.0;
         u.pitch = 1.0;
         window.speechSynthesis.speak(u);
-      }
+        }
 
-      // 濁点・半濁点・小文字の変換表
-      const DAKUTEN_MAP = {
+        // 濁点・半濁点・小文字の変換表
+        const DAKUTEN_MAP = {
         'か':'が','き':'ぎ','く':'ぐ','け':'げ','こ':'ご',
         'さ':'ざ','し':'じ','す':'ず','せ':'ぜ','そ':'ぞ',
         'た':'だ','ち':'ぢ','つ':'づ','て':'で','と':'ど',
         'は':'ば','ひ':'び','ふ':'ぶ','へ':'べ','ほ':'ぼ',
         'う':'ゔ'
-      };
-      const HANDAKUTEN_MAP = {
+        };
+        const HANDAKUTEN_MAP = {
         'は':'ぱ','ひ':'ぴ','ふ':'ぷ','へ':'ぺ','ほ':'ぽ'
-      };
-      const SMALL_MAP = {
+        };
+        const SMALL_MAP = {
         'あ':'ぁ','い':'ぃ','う':'ぅ','え':'ぇ','お':'ぉ',
         'や':'ゃ','ゆ':'ゅ','よ':'ょ',
         'つ':'っ',
         'わ':'ゎ'
-      };
+        };
 
-      let defaultStatus = '';
-      let statusTimer = null;
-      function flashStatus(msg){
+        let defaultStatus = '';
+        let statusTimer = null;
+        function flashStatus(msg){
         if (!defaultStatus) defaultStatus = statusEl.textContent || '';
         statusEl.textContent = msg;
         if (statusTimer) clearTimeout(statusTimer);
         statusTimer = setTimeout(() => {
-          statusEl.textContent = defaultStatus;
+            statusEl.textContent = defaultStatus;
         }, 1500);
-      }
+        }
 
-      // かなキーをタップ
-      kanaKeys.forEach(key => {
-        key.addEventListener('click', () => {
-          const kana = key.dataset.kana || "";
-          if (!kana) return;
-          buffer += kana;
-          updateOutput();
-          speak(kana); // 1文字だけ読む
-        });
-      });
+        // 1文字キー処理
+        function handleKanaKey(kana){
+        if (!kana) return;
+        buffer += kana;
+        updateOutput();
+        speak(kana);
+        }
 
-      // 機能キー（濁点・半濁点・小文字）
-      funcKeys.forEach(key => {
-        key.addEventListener('click', () => {
-          const action = key.dataset.action;
-          if (!buffer) return;
-          const last = buffer.slice(-1);
-          let replaced = last;
+        // 機能キー処理（濁点・半濁点・小文字）
+        function handleFuncAction(action){
+        if (!buffer) return;
+        const last = buffer.slice(-1);
+        let replaced = last;
 
-          if (action === 'dakuten') {
+        if (action === 'dakuten') {
             if (DAKUTEN_MAP[last]) {
-              replaced = DAKUTEN_MAP[last];
+            replaced = DAKUTEN_MAP[last];
             } else {
-              flashStatus('この文字には濁点をつけられません。');
-              return;
-            }
-          } else if (action === 'handakuten') {
-            if (HANDAKUTEN_MAP[last]) {
-              replaced = HANDAKUTEN_MAP[last];
-            } else {
-              flashStatus('この文字には半濁点をつけられません。');
-              return;
-            }
-          } else if (action === 'small') {
-            if (SMALL_MAP[last]) {
-              replaced = SMALL_MAP[last];
-            } else {
-              flashStatus('この文字を小さくできません。');
-              return;
-            }
-          } else {
+            flashStatus('この文字には濁点をつけられません。');
             return;
-          }
+            }
+        } else if (action === 'handakuten') {
+            if (HANDAKUTEN_MAP[last]) {
+            replaced = HANDAKUTEN_MAP[last];
+            } else {
+            flashStatus('この文字には半濁点をつけられません。');
+            return;
+            }
+        } else if (action === 'small') {
+            if (SMALL_MAP[last]) {
+            replaced = SMALL_MAP[last];
+            } else {
+            flashStatus('この文字を小さくできません。');
+            return;
+            }
+        } else {
+            return;
+        }
 
-          buffer = buffer.slice(0, -1) + replaced;
-          updateOutput();
-          speak(replaced);
+        buffer = buffer.slice(0, -1) + replaced;
+        updateOutput();
+        speak(replaced);
+        }
+
+        // key要素共通処理
+        function handleKeyElement(keyEl){
+        if (!keyEl || keyEl.classList.contains('empty')) return;
+        const kana = keyEl.dataset.kana;
+        const action = keyEl.dataset.action;
+
+        if (kana) {
+            handleKanaKey(kana);
+        } else if (action) {
+            handleFuncAction(action);
+        }
+        }
+
+        // ★ ゆるい当たり判定：ボード全体でクリックを拾う
+        if (boardEl) {
+        boardEl.addEventListener('click', (e) => {
+            // ① まずは普通にキーを押したかどうかを見る
+            const directKey = e.target.closest('.key');
+            if (directKey && !directKey.classList.contains('empty')) {
+            handleKeyElement(directKey);
+            return;
+            }
+
+            // ② どのキーでもない場所を押した場合：
+            //    → 一番近いキーを探して、そのキーを押したことにする
+            const x = e.clientX;
+            const y = e.clientY;
+
+            let bestKey = null;
+            let bestDistSq = Infinity;
+
+            allKeys.forEach(key => {
+            const r = key.getBoundingClientRect();
+            const cx = (r.left + r.right) / 2;
+            const cy = (r.top + r.bottom) / 2;
+            const dx = cx - x;
+            const dy = cy - y;
+            const distSq = dx*dx + dy*dy;
+            if (distSq < bestDistSq) {
+                bestDistSq = distSq;
+                bestKey = key;
+            }
+            });
+
+            // 許容する最大距離（半径 60px くらい）
+            const MAX_DIST_SQ = 60 * 60;
+
+            if (bestKey && bestDistSq <= MAX_DIST_SQ) {
+            handleKeyElement(bestKey);
+            }
         });
-      });
+        }
 
-      // 一文字もどす
-      btnUndo.addEventListener('click', () => {
+        // 一文字もどす
+        btnUndo.addEventListener('click', () => {
         if (!buffer) return;
         buffer = buffer.slice(0, -1);
         updateOutput();
-      });
+        });
 
-      // 全部けす
-      btnClear.addEventListener('click', () => {
+        // 全部けす
+        btnClear.addEventListener('click', () => {
         buffer = "";
         updateOutput();
-      });
+        });
 
-      // 文章を読む
-      btnSpeakSentence.addEventListener('click', () => {
+        // 文章を読む
+        btnSpeakSentence.addEventListener('click', () => {
         if (!buffer) return;
         speak(buffer);
-      });
+        });
 
-      // 初期チェック
-      if (!('speechSynthesis' in window)) {
+        // 初期チェック
+        if (!('speechSynthesis' in window)) {
         statusEl.textContent = '⚠ この端末では音声読み上げが使えません（古いブラウザの可能性があります）。';
-      } else {
+        } else {
         statusEl.textContent = '✅ 文字タップ＋「゛」「゜」「小」で変換し、「文章を読む」で全文発話します。';
-      }
-      defaultStatus = statusEl.textContent;
+        }
+        defaultStatus = statusEl.textContent;
     })();
-  </script>
+    </script>
+
 </body>
 </html>
