--- a/public/aiueo-board.html
+++ b/public/aiueo-board.html
@@ -158,7 +158,7 @@
 <body>
   <div class="wrap">
     <header>
-      <h1>指さし50音ボード（濁点・小文字対応／読み上げ付き）</h1>
+      <h1>指さし50音ボード（濁点・小文字対応／読み上げ付き_1119）</h1>
       <p>文字をタップ → 「゛」「゜」「小」で最後の文字を変えられます。「文章を読む」で全文発話。</p>
     </header>
 
