--- a/public/aiueo-board.html
+++ b/public/aiueo-board.html
@@ -51,7 +51,7 @@
     grid-template-columns: repeat(5, 1fr);
     gap: 4px;              /* ★ スキマを少し狭くして「ハズレ」を減らす */
     margin-bottom: 4px;
-    direction: rtl;        /* 右から あいうえお にする場合はそのまま */
+    /*direction: rtl;        /* 右から あいうえお にする場合はそのまま */
     }
     .key {
     border-radius: 10px;
